--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-﻿
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -7,6 +6,7 @@
     <title>Gemini 美食外送</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="importmap">
 {
   "imports": {
@@ -20,5 +20,6 @@
 </head>
 <body class="bg-gray-50">
     <div id="root"></div>
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
 </body>
 </html>
